Fixed z-index for editor.

--- a/app/assets/stylesheets/alcms/editor/_datetime.scss
+++ b/app/assets/stylesheets/alcms/editor/_datetime.scss
@@ -1,7 +1,7 @@
 .xdsoft_datetimepicker {
-  z-index: 10002;
+  z-index: 1002;
 
   .xdsoft_label {
-    z-index: 10002;
+    z-index: 1002;
   }
 }
