--- a/app/assets/stylesheets/alcms/editor/_editor-container.scss
+++ b/app/assets/stylesheets/alcms/editor/_editor-container.scss
@@ -7,7 +7,7 @@
     transition: $transition;
     width: 100%;
     top: $title-height;
-    z-index: 10001;
+    z-index: 1001;
     left: 0;
   }
 
