--- a/app/assets/stylesheets/alcms/editor/_editor.scss
+++ b/app/assets/stylesheets/alcms/editor/_editor.scss
@@ -16,7 +16,7 @@
     font-size: 24px;
     line-height: $title-height;
     letter-spacing: 7px;
-    z-index: 10001;
+    z-index: 1001;
 
     .buttons-left {
       display: inline-block;
