--- a/app/assets/stylesheets/alcms/editor/_menu.scss
+++ b/app/assets/stylesheets/alcms/editor/_menu.scss
@@ -12,7 +12,7 @@
     width: 100%;
     height: $menu-height;
     top: -155px;
-    z-index: 10000;
+    z-index: 1000;
     left: 0;
     font-size: 13px;
     font-family: Arial, sans-serif;
